MessageService implemented and tested